--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 * {
   margin: 0;
   min-width: 0;
+  font-size: 20px;
 }
 
 html {
@@ -48,8 +49,46 @@ h6 {
   text-wrap: balance;
 }
 
+li {
+  list-style-type: none;
+}
+
 p {
   text-wrap: pretty;
 }
 
-/* -------------- General settings -------------- */
+/* -------------- Header -------------- */
+
+.header_navbar {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.navbar {
+  display: flex;
+  background-color: red;
+}
+
+.navbar_mobile {
+  display: None;
+}
+
+.navbar_button {
+  margin-right: 20px;
+  margin-left: 20px;
+}
+
+.image {
+  max-width: 150px;
+  aspect-ratio: 1/1;
+}
+
+@media screen and (max-width: 600px) {
+  .navbar {
+    display: none;
+  }
+  .navbar_mobile {
+    display: flex;
+  }
+}
