--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,5 @@
 * {
   box-sizing: border-box;
-
   min-width: 0;
   line-height: 1.5;
   font-synthesis: none;
@@ -125,9 +124,9 @@ a {
 
 /* ------------------ Landing ------------------ */
 
-.full-height {
+/* .full-height {
   height: 86dvh;
-}
+} problema con el fin de la pagina */
 
 .back {
   background: url('../img/summer.jpeg');
@@ -169,17 +168,103 @@ a {
 }
 
 .slider-card-flex-2 {
-  margin: 10% 25%;
-  padding: 4rem;
+  margin: 15%;
+  padding: 3rem;
   border-radius: 1rem;
   background-color: #87c7e9;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 6em;
+  gap: 2em;
+}
+
+.slider-card-flex-2 > div {
+  width: 100%;
+}
+
+.slider-card-flex-2 > div > h2 {
+  margin-bottom: 1rem;
+}
+
+.slider-card-flex-2 > div > h3 {
+  margin-top: 1.2rem;
 }
 
 .slider-card-flex-2 > img {
   width: 100%;
 }
 /* ------------------ Visión ------------------ */
+
+/* ------------------ Trabajos ------------------ */
+
+.title {
+  margin-top: 20rem;
+  font-size: 2rem;
+}
+
+.three-flex {
+  margin: auto 10%;
+  display: flex;
+  justify-content: center;
+}
+
+.card {
+  margin: 8% 2%;
+  padding: 1% 1%;
+  border: 3px solid rgb(86, 86, 86);
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: 0.5s ease;
+}
+
+.card:hover {
+  scale: 105%;
+  cursor: pointer;
+}
+
+.card > img {
+  width: 100%;
+  border: 3px solid rgb(86, 86, 86);
+}
+
+.card-title {
+  margin-top: 0.8rem;
+  font-size: 1.5rem;
+}
+
+/* ------------------ Trabajos ------------------ */
+
+/* ------------------ sub-section ------------------ */
+
+.sub-section {
+  margin-top: 20rem;
+  padding-top: 5em;
+  padding-bottom: 5em;
+  background-color: #1178af;
+}
+
+.sub-section > div:nth-child(1) {
+  margin-right: 30rem;
+}
+.sub-section > div:nth-child(2) {
+  margin-left: 30rem;
+}
+.sub-section > div:nth-child(3) {
+  margin-right: 30rem;
+}
+
+/* ------------------ sub-section ------------------ */
+
+/* ------------------ contacto ------------------ */
+
+.contacto {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* ------------------ contacto ------------------ */
